Add files for version support

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,16 @@
+[bumpversion]
+current_version = 0.1.0
+commit = True
+tag = True
+
+[versioneer]
+VCS = git
+style = pep440
+versionfile_source = pspipe_utils/_version.py
+versionfile_build = pspipe_utils/_version.py
+tag_prefix = v
+parentdir_prefix = pspipe_utils-
+
 [coverage:run]
 omit =
      	pspipe_utils/tests/*
